--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <a class="menu more-menu-btn pull-left"><i class="fa fa-bars"></i></a>
             <h5 class="name text-center">BEHERCA</h5>
-            <a class="menu search-btn pull-right"><i class="fa fa-plus"></i></a>
+            <!-- <a class="menu search-btn pull-right"><i class="fa fa-plus"></i></a> -->
         </div>
     </header>
     <div id="ws-top" class="container-fluid top-main">
