--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                     <small><i class="fa fa-heart nice"></i></small>
                 </div>
                 <div class="text-left">
-                    <h1 class="org-name text-left text-ellipsis">2015</h1>
+                    <h1 id="date" class="date text-left text-ellipsis"></h1>
                 </div>
                 <div class="board courses">
                     <h4 class="board-title">关注</h4>
@@ -113,7 +113,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <small class="more">还有更多,不列举</small>
+                                <small class="more">...</small>
                             </a>
                         </li>
                     </ul>
@@ -232,7 +232,7 @@
                         </li>
                         <li>
                             <a href="http://weibo.com/beherca/">
-                                <small class="more">查看更多</small>
+                                <small class="more">...</small>
                             </a>
                         </li>
                     </ul>
