update the github link

--- a/app/index.html
+++ b/app/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>Beherca</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0">
@@ -42,15 +42,15 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="bg">
-        <img id="bg-blured-img" src="/images/blured-bg1.jpg" alt="">
-        <img id="bg-img" src="/images/bg1.jpg" alt="">
+        <img id="bg-blured-img" src="images/blured-bg1.jpg" alt="">
+        <img id="bg-img" src="images/bg1.jpg" alt="">
     </div>
     <div id="backdrop" class="backdrop">
     </div>
     <nav class="left-menu">
         <ul>
             <li>
-                <a href="https://github.com/beherca">Github</a>
+                <a href="https://github.com/beherca/personalintro">Github</a>
             </li>
             <li>
                 <a href="http://weibo.com/beherca">Weibo</a>
@@ -207,7 +207,7 @@
                         <li>
                             <div class="left-section section">
                                 <div class="buddy-icon-cont">
-                                    <img class="buddy-icon" src="/images/buddyicon01.png">
+                                    <img class="buddy-icon" src="images/buddyicon01.png">
                                 </div>
                                 <small class="name">beherca</small>
                             </div>
@@ -222,7 +222,7 @@
                         <li>
                             <div class="left-section section">
                                 <div class="buddy-icon-cont">
-                                    <img class="buddy-icon" src="/images/buddyicon02.png">
+                                    <img class="buddy-icon" src="images/buddyicon02.png">
                                 </div>
                                 <small class="name">beherca</small>
                             </div>
